fix z-index table fixed column

--- a/src/styles/components/_table.css
+++ b/src/styles/components/_table.css
@@ -30,7 +30,7 @@
     }
 
     .table-sticky-cell {
-        @apply first:sticky first:left-0 first:z-30;
+        @apply first:sticky first:left-0 first:z-20;
     }
 
     .table-sticky-column thead th,
